--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 
 
 <div class="container">
+
     <div class="row">
         <div class="col-12"></div>
         {#        <div class="col-2">col</div>#}
@@ -43,6 +44,13 @@
 <div class="container">
     <div class="row">
         <div class="col-4">
+            <main>
+                {% for message in get_flashed_messages() %}
+                    <div class="alert alert-danger" role="alert">{{ message }}</div>
+
+                {% endfor %}
+
+            </main>
             <form action="" method="post">
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">订阅数据邮箱</label>
@@ -52,11 +60,12 @@
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">省份代码</label>
-                    <input type="text" class="form-control" id="exampleInputPassword1" name="num">
+                    <input type="text" class="form-control" placeholder="11,43" id="exampleInputPassword1" name="num">
                 </div>
 
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
+
             {#            1One of three columns#}
 
         </div>
@@ -93,4 +102,5 @@
     </div>
 </div>
 </body>
+<script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.6.1/js/bootstrap.min.js"></script>
 </html>
