--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
-    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
 
@@ -47,9 +47,7 @@
             <main>
                 {% for message in get_flashed_messages() %}
                     <div class="alert alert-danger" role="alert">{{ message }}</div>
-
                 {% endfor %}
-
             </main>
             <form action="" method="post">
                 <div class="mb-3">
@@ -87,9 +85,7 @@
                     <tr>
                         <th scope="row">信息</th>
                         <td>{{ user.email }}</td>
-                        <td>
-                            {{ dss2 }}
-                        </td>
+                        <td>{{ user.sshengfenstr }}</td>
                         <td><a href="/{{ user.id }}">删除</a></td>
                     </tr>
                 {% endfor %}
@@ -102,5 +98,5 @@
     </div>
 </div>
 </body>
-<script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.6.1/js/bootstrap.min.js"></script>
+<script src="static/js/bootstrap.js"></script>
 </html>
